RESOLVED FIXED 276322
WebCodecs AudioDecoder callbacks leak the Document object
https://bugs.webkit.org/show_bug.cgi?id=276322
Summary WebCodecs AudioDecoder callbacks leak the Document object
Ryan Reno
Reported 2024-07-08 10:26:03 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-08 10:26:18 PDT
Ryan Reno
Comment 2 2024-07-08 10:31:49 PDT
EWS
Comment 3 2024-07-09 11:22:39 PDT
Committed 280783@main (8c66f1def4e5): <https://commits.webkit.org/280783@main> Reviewed commits have been landed. Closing PR #30568 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.