WebCodecs AudioDecoder callbacks leak the Document object https://bugs.webkit.org/show_bug.cgi?id=276322 rdar://131315241

Reviewed by Youenn Fablet.

This is similar to VideoDecoder's callbacks leaking the Document object
via holding references to the callback object but not ever releasing the
references (280738@main). To fix the leak, we make the callback Weak and
keep it alive via visitAdditionalChildren during the marking phase.

* LayoutTests/http/tests/webcodecs/audio-decoder-callbacks-do-not-leak-expected.txt: Added.
* LayoutTests/http/tests/webcodecs/audio-decoder-callbacks-do-not-leak.html: Copied from LayoutTests/http/tests/webcodecs/video-decoder-callbacks-do-not-leak.html.
* LayoutTests/http/tests/webcodecs/resources/audio-decoder-callbacks-frame.html: Added.
* LayoutTests/http/tests/webcodecs/video-decoder-callbacks-do-not-leak-expected.txt:
* LayoutTests/http/tests/webcodecs/video-decoder-callbacks-do-not-leak.html: Fixed a typo in the description of the test.
* Source/WebCore/Modules/webcodecs/WebCodecsAudioDataOutputCallback.h:
* Source/WebCore/Modules/webcodecs/WebCodecsAudioDataOutputCallback.idl:
* Source/WebCore/Modules/webcodecs/WebCodecsAudioDecoder.h:
(WebCore::WebCodecsAudioDecoder::outputCallbackConcurrently):
(WebCore::WebCodecsAudioDecoder::errorCallbackConcurrently):
* Source/WebCore/Modules/webcodecs/WebCodecsAudioDecoder.idl:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/JSWebCodecsAudioDecoderCustom.cpp: Added.
(WebCore::JSWebCodecsAudioDecoder::visitAdditionalChildren):

Canonical link: https://commits.webkit.org/280783@main